--- a/metrics/commits_sd.properties
+++ b/metrics/commits_sd.properties
@@ -9,16 +9,11 @@ factors=deviationmetrics
 weights=1.0
 
 # query results
-result.commitsTotal=commitsTotal
-result.commitsdanipenalba=commitsdanipenalba
-result.commitsKaizoIncc=commitsKaizoIncc
-result.commitsJordiSanchoo=commitsJordiSanchoo
-result.commitsCarlosSanchoo=commitsCarlosSanchoo
-result.commitsSergioo1313=commitsSergioo1313
-result.commitsAr1e1=commitsAr1e1
+result.stdevCommits=stdevCommits
+result.avgCommits=avgCommits
 
 # metric defines a formula based on execution results of parameter- and metric-queries
-metric=sqrt ( ( ( ( ( commitsdanipenalba / commitsTotal ) - ( ( commitsdanipenalba / commitsTotal + commitsKaizoIncc / commitsTotal + commitsJordiSanchoo / commitsTotal + commitsCarlosSanchoo / commitsTotal + commitsSergioo1313 / commitsTotal + commitsAr1e1 / commitsTotal ) / 6 ) ) ^ 2 ) + ( ( ( commitsKaizoIncc / commitsTotal ) - ( ( commitsdanipenalba / commitsTotal + commitsKaizoIncc / commitsTotal + commitsJordiSanchoo / commitsTotal + commitsCarlosSanchoo / commitsTotal + commitsSergioo1313 / commitsTotal + commitsAr1e1 / commitsTotal ) / 6 ) ) ^ 2 ) + ( ( ( commitsJordiSanchoo / commitsTotal ) - ( ( commitsdanipenalba / commitsTotal + commitsKaizoIncc / commitsTotal + commitsJordiSanchoo / commitsTotal + commitsCarlosSanchoo / commitsTotal + commitsSergioo1313 / commitsTotal + commitsAr1e1 / commitsTotal ) / 6 ) ) ^ 2 ) + ( ( ( commitsCarlosSanchoo / commitsTotal ) - ( ( commitsdanipenalba / commitsTotal + commitsKaizoIncc / commitsTotal + commitsJordiSanchoo / commitsTotal + commitsCarlosSanchoo / commitsTotal + commitsSergioo1313 / commitsTotal + commitsAr1e1 / commitsTotal ) / 6 ) ) ^ 2 ) + ( ( ( commitsSergioo1313 / commitsTotal ) - ( ( commitsdanipenalba / commitsTotal + commitsKaizoIncc / commitsTotal + commitsJordiSanchoo / commitsTotal + commitsCarlosSanchoo / commitsTotal + commitsSergioo1313 / commitsTotal + commitsAr1e1 / commitsTotal ) / 6 ) ) ^ 2 ) + ( ( ( commitsAr1e1 / commitsTotal ) - ( ( commitsdanipenalba / commitsTotal + commitsKaizoIncc / commitsTotal + commitsJordiSanchoo / commitsTotal + commitsCarlosSanchoo / commitsTotal + commitsSergioo1313 / commitsTotal + commitsAr1e1 / commitsTotal ) / 6 ) ) ^ 2 ) ) / 6 )
+metric= stdevCommits
 onError=set0
 
 
