--- a/metrics/commits_sd.properties
+++ b/metrics/commits_sd.properties
@@ -9,8 +9,8 @@ factors=deviationmetrics
 weights=1.0
 
 # query results
-result.stdevCommits=stdevCommits
-result.avgCommits=avgCommits
+# result.stdevCommits=stdevCommits
+# result.avgCommits=avgCommits
 
 # metric defines a formula based on execution results of parameter- and metric-queries
 metric= stdevCommits
