--- a/QUALITY_MODELS/AMEP/metrics/tasks_with_EE.properties
+++ b/QUALITY_MODELS/AMEP/metrics/tasks_with_EE.properties
@@ -3,20 +3,20 @@ index=$$taiga.task.index
 
 # metric props
 enabled=true
-name=Student closed tasks
-description=Percentage of closed tasks made by a student with respect to the total number of tasks assigned to student
-factors=fulfillmentoftasks
+name=Tasks with Estimated Effort Information
+description= Percentage of tasks with estimated effort information added with respect to the total number of tasks in this sprint
+factors=taskseffortinformation
 weights=1.0
 
 # query results
-result.closedTasksAssignee=closedTasksAssignee
-result.tasksAssigneeTotal=tasksAssigneeTotal
+result.tasksTotal=tasksTotal
+result.tasksWithEstimatedEffort=tasksWithEstimatedEffort
 
 # metric defines a formula based on execution results of parameter- and metric-queries
-metric= closedTasksAssignee / tasksAssigneeTotal
+metric= tasksWithEstimatedEffort / tasksTotal
 onError=set0
 
 
 #possible related_events sent by LD_connect from GITHUB: push, issues       from TAIGA: issue, epic, task, userstory, relatedusertory
 relatedEvent=task
-scope=individual
+scope=team
